crates/spoke-connect/bindings/swift/generated/spoke_connectFFI.h

uint16_t uniffi_spoke_connect_checksum_constructor_noncestore_new(void
    
);
uint16_t uniffi_spoke_connect_checksum_constructor_outboundsequence_new(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_toolhandler_handle(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_transport_send(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_transport_recv(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_transport_close(void
    
);
uint32_t ffi_spoke_connect_uniffi_contract_version(void
    
);