crates/spoke-connect/bindings/csharp/generated/spoke_connect.cs


    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_spoke_connect_checksum_constructor_noncestore_new(
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_spoke_connect_checksum_constructor_outboundsequence_new(
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_spoke_connect_checksum_method_toolhandler_handle(
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_spoke_connect_checksum_method_transport_send(
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_spoke_connect_checksum_method_transport_recv(
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_spoke_connect_checksum_method_transport_close(
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     uint ffi_spoke_connect_uniffi_contract_version(
    );

    
